--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,23 +6,26 @@ android {
 
     defaultConfig {
         applicationId "jonas.jacobsson.midgardensvardshus.matsedeln"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile files('libs/jsoup-1.8.3.jar')
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'net.steamcrafted:materialiconlib:1.1.1'
+    compile 'org.jsoup:jsoup:1.9.2'
 }
