--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ScrollingActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +24,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.MenuTabActivity"
+            android:label="menu"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activities.MapTabActivity"
+            android:label="map"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activities.ContactTabActivity"
+            android:label="contact"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
