--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
     }
 }
 
+apply plugin: 'android-apt'
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -28,4 +30,7 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
     compile 'org.jsoup:jsoup:1.9.2'
+
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
