--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="com.truiton.mapfragment.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyAj10dcbhcz_q2t8uxFEuS7z7dJ5SGuZg8" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ikon"
@@ -24,15 +36,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MenuTabActivity"
+        <activity
+            android:name=".activities.MenuTabActivity"
             android:label="menu"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.MapTabActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.MapTabActivity"
             android:label="map"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.ContactTabActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.ContactTabActivity"
             android:label="contact"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
 
