--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jonas.jacobsson.midgardensvardshus.matsedeln">
 
-    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="com.truiton.mapfragment.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-
-    <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyAj10dcbhcz_q2t8uxFEuS7z7dJ5SGuZg8" />
 
     <application
         android:allowBackup="true"
@@ -49,6 +41,13 @@
             android:label="contact"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAj10dcbhcz_q2t8uxFEuS7z7dJ5SGuZg8" />
     </application>
 
 </manifest>
