--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ikon"
+        android:icon="@mipmap/ic_circle_only_house"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
