--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
-
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "jonas.jacobsson.midgardensvardshus.matsedeln"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,26 +27,20 @@ apply plugin: 'android-apt'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-maps:10.2.4'
+    //    compile 'com.google.android.gms:play-services-location:10.2.4'
+    //    compile 'com.google.android.gms:play-services-ads:10.2.4'
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
     compile 'org.jsoup:jsoup:1.9.2'
-
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-
-    compile 'io.paperdb:paperdb:2.0'
-
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:25.0.1'
-
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.google.android.gms:play-services-ads:10.0.1'
+    //    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //    compile 'org.greenrobot:eventbus:3.0.0'
 }
