--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ android {
         config {
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.1'
     defaultConfig {
         applicationId "jonas.jacobsson.midgardensvardshus.matsedeln"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -22,25 +22,23 @@ android {
     }
 }
 
-apply plugin: 'android-apt'
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:10.2.4'
-    //    compile 'com.google.android.gms:play-services-location:10.2.4'
-    //    compile 'com.google.android.gms:play-services-ads:10.2.4'
-    compile 'com.roughike:bottom-bar:2.0.2'
-    compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    //    compile 'com.github.bumptech.glide:glide:3.7.0'
-    //    compile 'org.greenrobot:eventbus:3.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
+    implementation 'com.android.support:design:27.0.1'
+    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:cardview-v7:27.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    //    implementation 'com.google.android.gms:play-services-location:10.2.4'
+    //    implementation 'com.google.android.gms:play-services-ads:10.2.4'
+    implementation 'com.roughike:bottom-bar:2.0.2'
+    implementation 'net.steamcrafted:materialiconlib:1.1.4'
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //    implementation 'org.greenrobot:eventbus:3.0.0'
 }
